LPD-35517 Configure task